--- a/package.json
+++ b/package.json
@@ -4,4 +4,8 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.16"
   }
+  "scripts": {
+    "test": "echo \"Error: No Test Specified\" && exit 1",
+    "start": "node App.js"
+  }
 }
