--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "nodemon": "^2.0.16"
-  }
+  },
   "scripts": {
-    "start": "node App.js",
+    "start": "node App.js"
   }
 }
